fix(events): improve the overflow situation
people use phones smaller than 400px?

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1162,6 +1162,7 @@ section {
 
 .events__article__wrapper {
   display: grid;
+  gap: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -1176,7 +1177,7 @@ section {
   }
 }
 
-section.events .events__article__wrapper * {
+section.events .events__article__wrapper > * {
   max-width: 24rem;
 }
 
@@ -1215,26 +1216,11 @@ section.events .events__article__wrapper {
 }
 
 .events__article__wrapper .event__article {
-  margin-top: 1.5rem;
   display: flex;
   width: 100%;
   flex-grow: 0;
   flex-direction: column;
-}
-
-@media (min-width: 1024px) {
-  .events__article__wrapper .event__article {
-    margin-top: 0px;
-  }
-}
-
-.events__article__wrapper .event__article {
-  margin-top: 0.75rem;
-  margin-bottom: 0.75rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
   flex-shrink: 0;
-  max-width: 90%;
 }
 
 .event__background {
@@ -1273,6 +1259,10 @@ section.events .events__article__wrapper {
   aspect-ratio: 16 / 9;
 }
 
+.event__title_wrapper {
+  width: 100%;
+}
+
 .event__footer {
   display: flex;
   width: 100%;
@@ -1280,7 +1270,6 @@ section.events .events__article__wrapper {
 }
 
 .event__link {
-  margin-left: 6rem;
   display: block;
   --tw-bg-opacity: 1;
   background-color: rgb(0 115 188 / var(--tw-bg-opacity, 1));
